add MNIST example

--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,16 @@
 [tox]
+# Which version(s) of Python we want to run with
 envlist=py34
 
-# In the case of concurrent jobs, we don't want dist/, .egg-info and .tox
-# directories being created all over the place. Set some directories to be
-# temporary ones removed after container deletion
-toxworkdir=/tmp/tox
-distdir=/tmp/dist
-
 [testenv]
-commands=python tfexample.py
+# The command we want to run inside the Python environment
+commands=python fully_connected_feed.py
 
 # A list of *python* packages which should be installed from the PyPI or URLs
 # pointing to wheels. In this case we install the tensor flow wheel appropriate
-# for the Python version.
+# for the Python version. Note that this will satisfy the tensorflow requirement
+# in setup.py
 deps={env:TF_BINARY_URL}
-
-# This installs using the "-e" flag to pip. This is required to avoid creating
-# an .egg-info file in the project directory which may not be safe for
-# concurrent jobs
-#usedevelop=true
 
 [testenv:py34]
 setenv=
