--- a/tox.ini
+++ b/tox.ini
@@ -16,3 +16,8 @@ deps={env:TF_BINARY_URL}
 setenv=
 	TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-0.11.0-cp34-cp34m-linux_x86_64.whl
 
+
+[testenv:py27]
+setenv=
+	TF_BINARY_URL=https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-0.11.0-cp27-cp27m-linux_x86_64.whl
+
