add passthrough of env. variables for batch configuration

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ envlist=py34
 # The command we want to run inside the Python environment
 commands=python fully_connected_feed.py
 
+# Environment variables we'd like preserved
+passenv=JOB_* SGE_*
+
 # A list of *python* packages which should be installed from the PyPI or URLs
 # pointing to wheels. In this case we install the tensor flow wheel appropriate
 # for the Python version. Note that this will satisfy the tensorflow requirement
