add fun message as example of installing apt package

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist=py34
 
 [testenv]
 # The command we want to run inside the Python environment
-commands=python fully_connected_feed.py
+commands=
+	python fully_connected_feed.py
+	cowsay "I'm all done!"
 
 # Environment variables we'd like preserved
 passenv=JOB_* SGE_*
