--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist=py34
 commands=
 	python fully_connected_feed.py
 	cowsay "I'm all done!"
+whitelist_externals=cowsay
 
 # Environment variables we'd like preserved
 passenv=JOB_* SGE_*
