move cowsay to jobbies

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,7 @@ envlist=py34
 
 [testenv]
 # The command we want to run inside the Python environment
-commands=
-	python fully_connected_feed.py
-	cowsay "I'm all done!"
+commands=python fully_connected_feed.py
 whitelist_externals=cowsay
 
 # Environment variables we'd like preserved
